fixed updating user password bug
the get user by id query didn't retrieve tha password hash before
